--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.google.firebase:firebase-auth:9.2.1'
+    compile 'com.google.firebase:firebase-database:9.2.1'
 
 }
 apply plugin: 'com.google.gms.google-services'
