Set up ViewPager

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,11 @@
             android:label="Account"
             android:windowSoftInputMode="adjustResize"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".PigeonActivity"
+            android:label="Pigeon"
+            android:windowSoftInputMode="adjustResize"
+            android:theme="@style/MyMaterialTheme"/>
 
     </application>
 
