--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             android:windowSoftInputMode="adjustResize"
             android:theme="@style/MyMaterialTheme"/>
         <activity
-            android:name=".ChatActivity"
+            android:name=".MessageActivity"
             android:label="Chat"
             android:windowSoftInputMode="adjustResize"
             android:theme= "@style/AppTheme">
